# work-tracker

./: README.md  frontend.drawio
backend/: mypy.ini  pyproject.toml  tracker.db
backend/notes/: 11_Style_buttons.md  4_Finish Code.md  5_Finish the frontend.md  7_Do third year at uni.md
backend/tracker/: crud.py  database.py  main.py  models.py  schemas.py
frontend/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  tslint.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: Editor.vue  TaskItem.vue  TaskList.vue
