[tool.poetry]
name = "tracker"
version = "0.1.0"
description = "Work tracker and note-taking system"
authors = ["Dominic Mason <eeydem@nottingham.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.18"
pydantic = "^1.5.1"
python-multipart = "^0.0.5"
fastapi = "^0.58.0"
mypy = "^0.782"
aiofiles = "^0.5.0"
coloredlogs = "^14.0"
colorama = "^0.4.3"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

